# RubikDetector-Android

./: .gitignore  README.md  settings.gradle
RubikDetectorAndroid/: .gitignore  README.md  build.gradle  settings.gradle
RubikDetectorAndroid/app/: build.gradle
RubikDetectorAndroid/app/src/main/: AndroidManifest.xml
RubikDetectorAndroid/fotoapparatconnector/: build.gradle  uploadToBintray.gradle
RubikDetectorAndroid/fotoapparatconnector/src/main/: AndroidManifest.xml
RubikDetectorAndroid/gradle/wrapper/: gradle-wrapper.properties
RubikDetectorAndroid/openCVLibrary24132/: build.gradle
RubikDetectorAndroid/openCVLibrary320/: build.gradle
RubikDetectorAndroid/rubikdetector/: CMakeLists.txt  build.gradle  decodeNativeStacktrace.sh  proguard-consumer-rules.pro  uploadToBintray.gradle
RubikDetectorAndroid/rubikdetector/src/androidTest/java/com/catalinjurjiu/rubikdetector/: ExampleInstrumentedTest.java
RubikDetectorAndroid/rubikdetector/src/main/: AndroidManifest.xml  jniLibs
RubikDetectorAndroid/rubikdetector/src/main/cpp/: rubikdetectorcore
RubikDetectorAndroid/rubikdetector/src/main/cpp/jni/: OnCubeDetectionJniBridgeListener.cpp  OnCubeDetectionJniBridgeListener.hpp  RubikDetectorJni.cpp  RubikDetectorJni.hpp
RubikDetectorAndroid/rubikdetector/src/main/cpp/jni/include/: OnCubeDetectionJniBridgeListener.hpp  RubikDetectorJni.hpp  RubikDetectorJniUtils.hpp
RubikDetectorAndroid/rubikdetector/src/main/cpp/jni/src/: OnCubeDetectionJniBridgeListener.cpp  RubikDetectorJni.cpp  RubikDetectorJniUtils.cpp
RubikDetectorAndroid/rubikdetector/src/main/java/com/catalinjurjiu/rubikdetector/: Point2d.java  RubikDetector.java  RubikDetectorUtils.java  RubikFacelet.java
RubikDetectorAndroid/rubikdetector/src/main/java/com/catalinjurjiu/rubikdetector/config/: DrawConfig.java
RubikDetectorAndroid/rubikdetector/src/main/java/com/catalinjurjiu/rubikdetector/model/: Point2d.java  RubikFacelet.java
RubikDetectorAndroid/rubikdetector/src/main/res/values/: strings.xml
RubikDetectorLinux/: .gitignore  CMakeLists.txt  README.md
RubikDetectorLinux/src/: main.cpp  rubikdetectorcore
app/: build.gradle
app/src/main/: AndroidManifest.xml
openCVLibrary24132/src/main/: AndroidManifest.xml
rubikdetector/: CMakeLists.txt  build.gradle
rubikdetector/src/main/: AndroidManifest.xml  jniLibs
rubikdetectorcore/: .gitignore  Doxyfile  README.md
rubikdetectorcore/data/: Circle.cpp  Circle.hpp  DrawConfig.cc  DrawConfig.hpp  HueColorEvidence.cpp  HueColorEvidence.hpp  ImageProperties.cpp  ImageProperties.hpp  Point2d.cc  Point2d.hpp  RubikFacelet.cc  RubikFacelet.cpp  RubikFacelet.hpp
rubikdetectorcore/detectors/colordetector/: ColorDetector.cpp  ColorDetector.hpp  ColorDetectorBehavior.cpp  ColorDetectorBehavior.hpp  HistogramColorDetector.cpp  HistogramColorDetector.hpp  HistogramColorDetectorBehavior.cpp  HistogramColorDetectorBehavior.hpp  HistogramColorDetectorImpl.cpp  HistogramColorDetectorImpl.hpp
rubikdetectorcore/detectors/cubedetector/: CubeDetector.cpp  CubeDetector.hpp  CubeDetectorBehavior.cpp  CubeDetectorBehavior.hpp  OnCubeDetectionResultListener.hpp
rubikdetectorcore/detectors/faceletsdetector/: FaceletsDetector.hpp  OnCubeDetectionResultListener.hpp  SimpleFaceletsDetector.cpp  SimpleFaceletsDetector.hpp  SimpleFaceletsDetectorBehavior.cpp  SimpleFaceletsDetectorBehavior.hpp  SimpleFaceletsDetectorImpl.cpp  SimpleFaceletsDetectorImpl.hpp
rubikdetectorcore/detectors/rubikdetector/: RubikDetector.cpp  RubikDetector.hpp  RubikDetectorBehavior.cpp  RubikDetectorBehavior.hpp  RubikDetectorImpl.cpp  RubikDetectorImpl.hpp
rubikdetectorcore/detectors/rubikdetector/builder/: RubikDetectorBuilder.cc  RubikDetectorBuilder.hpp
rubikdetectorcore/drawing/: FaceletsDrawController.cc  FaceletsDrawController.cpp  FaceletsDrawController.hpp
rubikdetectorcore/helpers/: ImageSaver.cpp  ImageSaver.hpp
rubikdetectorcore/imagesaver/: ImageSaver.cpp  ImageSaver.hpp
rubikdetectorcore/include/rubikdetector/drawing/: FaceletsDrawController.hpp
rubikdetectorcore/include/rubikdetector/misc/: Debuggable.hpp
rubikdetectorcore/misc/: Debuggable.hpp
rubikdetectorcore/processor/: ImageProcessor.hpp
rubikdetectorcore/src/drawing/: FaceletsDrawController.cpp
rubikdetectorcore/src/imagesaver/: ImageSaver.cpp
rubikdetectorcore/src/rubikprocessor/: RubikProcessor.cpp  RubikProcessorImpl.cpp
rubikdetectorcore/src/utils/: Utils.cpp
rubikdetectorcore/utils/: CrossLog.hpp  Utils.cpp  Utils.hpp
(+134 files in other folders)
